# qemu_riscCore

./: .gitignore  CMakeLists.txt  README.md  virt.dtb  virt.dts  开发手册.md
boot/: entry.S
cmake/: riscv64-unknown-elf.cmake
docs/: 从 ebreak 到最小 OS 闭环开发清单.md  代码架构设计.md  地址来源与寄存器参考.md
drivers/uart/: uart.cpp  uart.h
kernel/: kernel.cpp
kernel/arch/riscv/mm/: mmu.cpp  mmu.h  page_table.cpp  page_table.h  sv39.h
kernel/arch/riscv/syscall/: sys_exit.cpp  sys_write.cpp  sys_yield.cpp  syscall.cpp  syscall.h  syscall_numbers.h
kernel/arch/riscv/task/: switch.S
kernel/arch/riscv/trap/: trap.cpp  trap.h  trap_entry.S  trap_logic.h
kernel/core/init/: bootstrap.cpp  bootstrap.h
kernel/core/sched/: run_queue.cpp  run_queue.h  scheduler.cpp  scheduler.h
kernel/core/task/: context.h  switch.h  task.h  task_manager.cpp  task_manager.h  task_types.h
kernel/lib/ds/: bitmap.cpp  bitmap.h  intrusive.h  list.cpp  list.h  queue.cpp  queue.h
kernel/mm/: kernel_address_space.cpp  kernel_address_space.h  page.h  pmm.cpp  pmm.h  pmm_platform.cpp
kernel/time/: timer.cpp  timer.h
platform/: linker_symbols.h  memmap.h  riscv.h
platform/qemu/: memmap.h
platform/qemu/devices/timer/: clint_timer.h
scripts/: linker.ld
tests/: CMakeLists.txt
tests/ds/: bitmap_unit_tests.cpp  list_unit_tests.cpp  queue_unit_tests.cpp
tests/env/: README.md  a.out  env_test.cpp  env_test.s
tests/host_stubs/: pmm_stub.cpp  scheduler_stub.cpp  uart_stub.cpp
tests/mm/: page_table_unit_tests.cpp  page_unit_tests.cpp  pmm_unit_tests.cpp  sv39_unit_tests.cpp
tests/trap/: trap_unit_tests.cpp
